# codecrafters-interpreter-cpp

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  CMakePresets.json  MODULE.bazel  README-codecrafter.md  README.md  WORKSPACE.bazel  driver.cpp  grammar.md  interpreter.cpp  run.sh  run_interpreter.sh  vcpkg-configuration.json  vcpkg.json  vcpkg[menifest-mode].json  your_program.sh
.codecrafters/: compile.sh  run.sh
benchmark/: BUILD.bazel  CMakeLists.txt  fib.bm.cpp  fib_bm.cpp
cmake/: debug_mode.cmake  dlls.cmake  prelude.cmake
demo/: BUILD.bazel  CMakeLists.txt  demo_playground.cpp  spdlog.cpp
driver/: BUILD.bazel
driver/include/: ASTPrinter.hpp  Environment.hpp  Evaluatable.hpp  Expr.hpp  ExprVisitor.hpp  IVisitor.hpp  Monostate.hpp  Resolver.hpp  ScopeAssoc.hpp  ScopeEnvironment.hpp  StmtVisitor.hpp  SyntaxLiteral.hpp  Token.hpp  TokenType.hpp  Variant.hpp  config.hpp  expression.hpp  file_reader.hpp  fmt.hpp  interpreter.hpp  lex_error.hpp  lexer.hpp  loxo_fwd.hpp  parse_error.hpp  parser.hpp  statement.hpp  status.hpp  utils.hpp
driver/include/details/: IVisitor.hpp  ScopeAssoc.inl  TokenType.inl  lex_error.hpp  lox_fwd.hpp  loxo_fwd.hpp
driver/include/internal/: variadic.h
driver/src/: ASTPrinter.cpp  Environment.cpp  Evaluatable.cpp  Expr.cpp  ExprVisitor.cpp  Resolver.cpp  ScopeAssoc.cpp  ScopeEnvironment.cpp  StmtVisitor.cpp  SyntaxLiteral.cpp  Token.cpp  TokenType.cpp  expression.cpp  interpreter.cpp  lexer.cpp  parser.cpp  statement.cpp  status.cpp
example/: CMakeLists.txt
examples/: ctrl.error3.lox  ctrl.error4.lox  ctrl.if2.lox  ctrl.if4.lox  ctrl.logical2.lox  ctrl.while2.lox  dynamic.lox  eval.str.lox  eval.str2.lox  eval.strnum.lox  eval.unarystr.lox  lex.number.lox  lex.string.lox  parse.expr1.lox  parse.expr4.lox
examples/class/: ctor.global.lox  ctor.return2.lox  ctor.return4.lox  decl.func.lox  decl.global.lox  decl.global2.lox  inheritance.basic.lox  inheritance.error1.lox  inheritance.error3.lox  inheritance.methods.lox  inheritance.overrides.lox  inheritance.super.lox  instance.global.lox  instance.local.lox  methods.global.lox  methods.local.lox  property.basic.lox  property.manipulation.lox  property.multiple.lox  super.error1.lox  super.error2.lox  super.error3.lox  symbols.lox  this.property.lox
examples/ctrlflow/: error3.lox  error4.lox
examples/eval/: str.lox  str2.lox  strnum.lox
examples/fn/: closure1.lox  custom1.lox  recurse1.lox  return1.lox  scope1.lox  scope2.lox  scope3.lox
examples/parsing/: str.lox
examples/scope/: func.global.lox  local_func.lox  redefine.mixed.lox  return.block.lox  return.global.lox  return.mixed.lox  self.init.global.lox  self.init.local.lox  self.init.wrapped.lox
include/: Expr.hpp  Token.hpp  TokenType.hpp  config.hpp  expr.hpp  file_reader.hpp  lex_error.hpp  lexer.hpp  loxo_fwd.hpp  loxo_main.hpp  parse_error.hpp  parser.hpp  parser_test.hpp  status.hpp  std.hh
include/internal/: variadic.h
platform/: BUILD.bazel
shared/: BUILD.bazel  execution_context.hpp  lox_driver.cpp  loxo_driver.cpp  loxograph_driver.cpp  test_env.hpp
shared/include/net/ancillarycat/utils/: Monostate.hpp  Status.hpp  Variant.hpp  config.hpp  file_reader.hpp  format.hpp
shared/include/net/ancillarycat/utils/details/: variadic.h
src/: Token.cpp  TokenType.cpp  config.hpp  file_reader.hpp  lexer.cpp  lexer.hpp  loxo_fwd.hpp  loxograph_driver.cpp  main.cpp  parser.cpp  status.cpp  status.hpp  token.hpp  variadic.h
test/: AST.cpp  BUILD.bazel  CMakeLists.txt  class.test.cpp  controlflow.cpp  controlflow.test.cpp  evaluate.cpp  evaluate.test.cpp  function.cpp  function.test.cpp  interpret.cpp  interpret.test.cpp  lox_add_test.bzl  loxo_add_test.bzl  parse.cpp  parse.test.cpp  scan.cpp  scan.test.cpp  scope.test.cpp  spdlog.cpp  test_env.hpp
toolchain/: BUILD.bazel  utils.bzl  windows_cc_toolchain_config.bzl
tools/: BUILD.bazel  execution_context.hpp  interpreter.cpp  lox_interpreter.cpp  loxograph_driver.cpp
