
# cc_binary(
#     name = "interpreter",
#     srcs = [
#         "//tools:interpreter.cpp",
#         "//tools:loxograph_driver.cpp",
#     ] ,
#     copts = [
#         "/std:c++latest",
#     ],
#     defines = [
#         "AC_CPP_DEBUG",
#         "LIBLOCOGRAPH_SHARED",
#     ],
#     includes = [
#         "driver/include",
#         "tools",
#     ],
#     visibility = ["//visibility:public"],
#     deps = [
#         "//driver:driver",
#     ],
# )

# driver_srcs = glob(["driver/src/*.cpp"])

# driver_includes = ["driver/include"]

# cc_library(
#     name = "driver",
#     srcs = driver_srcs,
#     copts = [
#         "/std:c++latest",
#     ],
#     defines = [
#         "AC_CPP_DEBUG",
#         "LIBLOCOGRAPH_SHARED",
#         "driver_EXPORTS",
#     ],
#     includes = driver_includes,
#     linkstatic = False,
#     visibility = ["//visibility:public"],
#     deps = [
#         "@fmt",
#         "@spdlog",
#     ],
# )
