"""
Module definition for loxo project.
"""

module(
    name = "loxo",
    version = "1.0.0",
)

# bazel_dep(name = "rules_java", version = "8.5.1")  # <-- needed when use bazel inside JetBrains IDE
bazel_dep(name = "rules_cc", version = "0.1.0")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "fmt", version = "11.0.2")
bazel_dep(name = "spdlog", version = "1.15.0")
bazel_dep(name = "google_benchmark", version = "1.8.5")
# bazel_dep(name = "magic_enum", version = "0.9.6")
# bazel_dep(name = "toolchains_llvm", version = "1.2.0")
# bazel_dep(name = "argparse", version = "3.0.0")