cc_binary(
    name = "fib_bm",
    srcs = [
        "fib_bm.cpp",
        "//shared:execution_context.hpp",
        "//shared:loxo_driver.cpp",
        "//shared:test_env.hpp",
    ],
    copts = [
        "/std:c++latest",
        "/Ishared",
        "/Ishared/include",
        "/Idriver/include",
        "/Zc:preprocessor",
    ],
    defines = [
        "AC_CPP_DEBUG",
        "LIBLOXO_SHARED",
    ],
    deps = [
        "//driver",
        "@fmt",
        "@google_benchmark//:benchmark",
        "@spdlog",
    ],
)
