cc_binary(
    name = "fib.benchmark",
    srcs = [
        "fib.bm.cpp",
        "//shared:execution_context.hpp",
        "//shared:lox_driver.cpp",
        "//shared:test_env.hpp",
    ],
    copts = [
        "/std:c++latest",
        "/Ishared",
        "/Ishared/include",
        "/Idriver/include",
        "/Zc:preprocessor",
    ],
    defines = [
        "AC_CPP_DEBUG",
        "LIBlox_SHARED",
    ],
    deps = [
        "//driver",
        "@fmt",
        "@google_benchmark//:benchmark",
        "@spdlog",
    ],
)
