driver_srcs = glob(["src/*.cpp"])

driver_includes = ["include"]

cc_library(
    name = "driver",
    srcs = driver_srcs,
    copts = [
        "/std:c++latest",
    ],
    defines = [
        "AC_CPP_DEBUG",
        "LIBLOXOGRAPH_SHARED",
        "driver_EXPORTS",
    ],
    includes = driver_includes,
    linkstatic = False,
    visibility = ["//visibility:public"],
    deps = [
        "@fmt",
        "@spdlog",
    ],
)
