driver_srcs = glob(["src/*.cpp"])

driver_includes = ["include"]

cc_library(
    name = "driver",
    srcs = driver_srcs,
    copts = [
        "/std:c++latest",
        "/Ishared/include",  # MUST be added, relative to the WORKSPACE file
        "/Zc:preprocessor",
    ],
    defines = [
        "AC_CPP_DEBUG",
        "LIBlox_SHARED",
        "driver_EXPORTS",
        "AC_SILENCE_CPP_STANDARD_CHECK",
    ],
    includes = driver_includes,
    linkstatic = False,
    visibility = ["//visibility:public"],
    deps = [
        "//shared/auxilia",
        "@fmt",
        "@spdlog",
    ],
)
