cc_test(
    name = "dummy",
    srcs = ["AST.cpp, test_env.hpp, tools/execution_context.hpp"],
    copts = [
        "/Iexternal/gtest/googletest/include",
        "/Iexternal/gtest/googletest",
        "/std:c++latest",
    ],
		defines = ["AC_CPP_DEBUG"],
    includes = ["driver/include"],
    deps = [
        "//driver:driver",
        "@googletest//:gtest_main",
    ],
)
