load("//test:loxo_add_test.bzl", "loxo_add_test")

loxo_add_test(
		"scan",
		"scan.cpp",
)
loxo_add_test(
		"parse",
		"parse.cpp",
)
loxo_add_test(
		"evaluate",
		"evaluate.cpp",
)
loxo_add_test(
    "interpret",
    "interpret.cpp",
)

loxo_add_test(
    "controlflow",
    "controlflow.cpp",
)

loxo_add_test(
    "function",
    "function.cpp",
)
