cc_binary(
    name = "interpreter",
    srcs = [
        "lox_interpreter.cpp",
				"//shared:loxo_driver.cpp",
				"//shared:execution_context.hpp",
    ] ,
    copts = [
        "/std:c++latest",
    ],
    defines = [
        "AC_CPP_DEBUG",
        "LIBLOXO_SHARED", # wired build error if build dll
    ],
    includes = [
        "driver/include",
				"shared/",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//driver:driver",
    ],
)
