cc_binary(
    name = "interpreter",
    srcs = [
        "lox_interpreter.cpp",
				"//shared:loxo_driver.cpp",
				"//shared:execution_context.hpp",
    ] ,
    copts = [
        "/std:c++latest",
        "/Ishared/include",
        "/Ishared",
        "/Idriver/include", 
    ],
    defines = [
        "AC_CPP_DEBUG",
        "LIBLOXO_SHARED",
    ],
    includes = [
        "driver/include",
				"shared/",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//driver:driver",
    ],
)
