cc_binary(
    name = "interpreter",
    srcs = [
        "//shared:execution_context.hpp",
        "//shared:lox_driver.cpp",
        "lox_interpreter.cpp",
    ],
    copts = [
        "/std:c++latest",
        "/Ishared/include",
        "/Ishared",
        "/Idriver/include",
        "/Zc:preprocessor",
    ],
    defines = [
        "AC_CPP_DEBUG",
        "LIBlox_SHARED",
    ],
    includes = [
        "driver/include",
        "shared/",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//driver",
    ],
)
